feat: enhance README and project structure; add product service and environment configuration

--- a/checkout-frontend/tsconfig.json
+++ b/checkout-frontend/tsconfig.json
@@ -9,7 +9,8 @@
       "@core/*": ["src/app/core/*"],
       "@shared/*": ["src/app/shared/*"],
       "@features/*": ["src/app/features/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@environments/*": ["src/environments/*"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
