--- a/checkout-monolith-app/src/main/resources/application.properties
+++ b/checkout-monolith-app/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
