--- a/checkout-frontend/package.json
+++ b/checkout-frontend/package.json
@@ -21,6 +21,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@ngxs/devtools-plugin": "19.0.0",
     "@ngxs/store": "^19.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
