--- a/checkout-monolith-app/src/main/resources/application.properties
+++ b/checkout-monolith-app/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-spring.application.name=checkout-monolith
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/checkout
+spring.datasource.username=checkout
+spring.datasource.password=checkout
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
