feat: add Micrometer and logging enhancements, update dependencies

--- a/checkout-monolith-app/src/test/resources/application.properties
+++ b/checkout-monolith-app/src/test/resources/application.properties
@@ -11,3 +11,8 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
+management.metrics.export.otlp.enabled=false
+management.metrics.export.loki.enabled=false
+management.metrics.export.prometheus.enabled=false
+management.logging.loki.enabled=false
+
