--- a/checkout-monolith-app/src/main/resources/application.properties
+++ b/checkout-monolith-app/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=Checkout-monolith
 spring.datasource.url=jdbc:postgresql://localhost:5432/checkout
 spring.datasource.username=checkout
 spring.datasource.password=checkout
@@ -10,3 +11,16 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.io.micrometer.registry.otlp=ERROR
+# For OTLP - OTLP Prometheus endpoint, OTLP requires pushing
+management.otlp.metrics.export.url=http://localhost:9090/api/v1/otlp/v1/metrics
+# only for demo purposes
+management.otlp.metrics.export.step=2s
+# All traces should be sent to latency analysis tool
+management.tracing.sampling.probability=1.0
+# OTLP endpoint - OTLP Tempo endpoint
+management.zipkin.tracing.endpoint=http://localhost:4318/v1/traces
+management.zipkin.tracing.encoding=PROTO3
+
+# For Exemplars to work we need histogram buckets - TODO: Micrometer OTLP doesn't yet support exemplars
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
