feat: add Docker compose support for microservices

--- a/microservices/cart-ms/src/main/resources/application.properties
+++ b/microservices/cart-ms/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.io.micrometer.registry.otlp=ERROR
+# loki url
+logging.loki.url=http://localhost:3100/loki/api/v1/push
 # For OTLP - OTLP Prometheus endpoint, OTLP requires pushing
 management.otlp.metrics.export.url=http://localhost:9090/api/v1/otlp/v1/metrics
 # only for demo purposes
