--- a/microservices/gateway/src/main/resources/application.properties
+++ b/microservices/gateway/src/main/resources/application.properties
@@ -5,6 +5,8 @@ logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMap
 # add traceId and Span to telemetry
 spring.reactor.context-propagation=AUTO
 logging.level.io.micrometer.registry.otlp=ERROR
+# loki url
+logging.loki.url=http://localhost:3100/loki/api/v1/push
 # For OTLP - OTLP Prometheus endpoint, OTLP requires pushing
 management.otlp.metrics.export.url=http://localhost:9090/api/v1/otlp/v1/metrics
 # only for demo purposes
@@ -16,3 +18,6 @@ management.zipkin.tracing.endpoint=http://localhost:4318/v1/traces
 management.zipkin.tracing.encoding=PROTO3
 # For Exemplars to work we need histogram buckets - TODO: Micrometer OTLP doesn't yet support exemplars
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+# ecommerce properties
+ecommerce.checkout.products.url=http://localhost:8081
+ecommerce.checkout.cart.url=http://localhost:8082
