--- a/microservices/products-ms/src/main/resources/application.properties
+++ b/microservices/products-ms/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=products-ms
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/checkout
-spring.datasource.username=checkout
-spring.datasource.password=checkout
+spring.datasource.url=jdbc:postgresql://localhost:5432/products_ms
+spring.datasource.username=products_ms
+spring.datasource.password=products_ms
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
@@ -13,6 +13,8 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.io.micrometer.registry.otlp=ERROR
+# loki url
+logging.loki.url=http://localhost:3100/loki/api/v1/push
 # For OTLP - OTLP Prometheus endpoint, OTLP requires pushing
 management.otlp.metrics.export.url=http://localhost:9090/api/v1/otlp/v1/metrics
 # only for demo purposes
