feat: update config server integration and add docker-compose integration

--- a/microservices/products-ms/src/main/resources/application-local.properties
+++ b/microservices/products-ms/src/main/resources/application-local.properties
@@ -21,4 +21,7 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.io.micrometer.registry.otlp=ERROR
+logging.level.org.springframework.boot.context.config=DEBUG
+logging.level.org.springframework.cloud=DEBUG
+
 
