--- a/microservices/cart-ms/src/main/resources/application.properties
+++ b/microservices/cart-ms/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=cart-ms
-spring.config.import=configserver:http://localhost:8888
 spring.profiles.active=default
+spring.config.import=configserver:${CONFIG_SERVER_URL:http://localhost:8888}
+spring.application.name=cart-ms
