--- a/microservices/cart-ms/src/test/resources/application.properties
+++ b/microservices/cart-ms/src/test/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=checkout-monolith
+spring.config.import=optional:configserver:http://localhost:8888
+spring.application.name=cart-ms
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
