--- a/microservices/config-server/src/main/resources/application.properties
+++ b/microservices/config-server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8888
 spring.application.name=config-server
 spring.cloud.config.server.native.search-locations=classpath:/config
 spring.profiles.active=native
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
