--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -6,14 +6,29 @@ services:
     build:
       context: ./gateway
     container_name: checkout-gateway
+    depends_on:
+      config-server:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
-      - MANAGEMENT_OTLP_METRICS_EXPORT_URL=http://prometheus:9090/api/v1/otlp/v1/metrics
-      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://tempo:4318/v1/traces
-      - LOGGING_LOKI_URL=http://loki:3100/loki/api/v1/push
-      - ECOMMERCE_CHECKOUT_PRODUCTS_URL=http://products-ms:8081
-      - ECOMMERCE_CHECKOUT_CART_URL=http://cart-ms:8082
+      - CONFIG_SERVER_URL=http://config-server:8888
+    networks:
+      - spring-cloud-microservice
+
+  config-server:
+    build:
+      context: ./config-server
+    container_name: config-server
+    environment:
+      - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCHLOCATIONS=file:/app/config
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8888/actuator/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    volumes:
+      - ./docker/config-server/config:/app/config
     networks:
       - spring-cloud-microservice
   
@@ -22,15 +37,12 @@ services:
       context: ./cart-ms
     container_name: cart-ms
     depends_on:
-      - postgres
-    ports:
-      - "8082:8082"
+      config-server:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     environment:
-      - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/cart_ms
-      - MANAGEMENT_OTLP_METRICS_EXPORT_URL=http://prometheus:9090/api/v1/otlp/v1/metrics
-      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://tempo:4318/v1/traces
-      - LOGGING_LOKI_URL=http://loki:3100/loki/api/v1/push
+      - CONFIG_SERVER_URL=http://config-server:8888
     networks:
       - spring-cloud-microservice
 
@@ -39,15 +51,13 @@ services:
       context: ./products-ms
     container_name: products-ms
     depends_on:
-      - postgres
-    ports:
-      - "8081:8081"
+      config-server:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     environment:
-      - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/products_ms
-      - MANAGEMENT_OTLP_METRICS_EXPORT_URL=http://prometheus:9090/api/v1/otlp/v1/metrics
-      - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://tempo:4318/v1/traces
-      - LOGGING_LOKI_URL=http://loki:3100/loki/api/v1/push
+      - CONFIG_SERVER_URL=http://config-server:8888
+      - SPRING_CONFIG_IMPORT=configserver:http://config-server:8888
     networks:
       - spring-cloud-microservice
     
@@ -60,22 +70,16 @@ services:
       POSTGRES_PASSWORD: checkout
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U checkout"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
     volumes:
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - spring-cloud-microservice
-  #    collector:
-  #        image: otel/opentelemetry-collector:0.103.1
-  #        extra_hosts: ['host.docker.internal:host-gateway']
-  #        volumes:
-  #            - ./docker/otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
-  #        ports:
-  #            - 1888:1888 # pprof extension
-  #            - 8888:8888 # Prometheus metrics exposed by the collector
-  #            - 8889:8889 # Prometheus exporter metrics
-  #            - 13133:13133 # health_check extension
-  #            - 4318:4318 # OTLP http receiver (for metrics and spans)
-  #            - 55679:55679 # zpages extension
+      
   prometheus:
     image: prom/prometheus:v2.54.1 # https://hub.docker.com/r/prom/prometheus
     container_name: prometheus-service
