--- a/microservices/products-ms/src/main/resources/application.properties
+++ b/microservices/products-ms/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=products-ms
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.profiles.active=default
