feat: add Eureka client support and update configuration for microservices

--- a/microservices/cart-ms/src/main/resources/application-local.properties
+++ b/microservices/cart-ms/src/main/resources/application-local.properties
@@ -1,4 +1,5 @@
 spring.sql.init.mode=always
+spring.profiles.active=local
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
@@ -7,6 +8,8 @@ spring.datasource.username=cart_ms
 spring.datasource.url=jdbc:postgresql://localhost:5432/cart_ms
 spring.datasource.password=cart_ms
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.cloud.config.discovery.service-id=config-server
+spring.cloud.config.discovery.enabled=true
 spring.application.name=cart-ms
 server.port=8082
 management.zipkin.tracing.endpoint=http://localhost:4318/v1/traces
@@ -16,7 +19,10 @@ management.otlp.metrics.export.url=http://localhost:9090/api/v1/otlp/v1/metrics
 management.otlp.metrics.export.step=2s
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 logging.loki.url=http://localhost:3100/loki/api/v1/push
+logging.level.zipkin2.reporter=ERROR
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.io.micrometer.registry.otlp=ERROR
+logging.level.com.github.loki4j.client.pipeline=DEBUG
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
