--- a/microservices/gateway/src/main/resources/application.properties
+++ b/microservices/gateway/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=default
-spring.config.import=configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.application.name=checkout-gateway
+spring.config.import=configserver:
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=config-server
