--- a/microservices/config-server/src/main/resources/application.properties
+++ b/microservices/config-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8888
-spring.application.name=config-server
-spring.cloud.config.server.native.search-locations=classpath:/config
 spring.profiles.active=native
+spring.cloud.config.server.native.search-locations=classpath:/config
+spring.application.name=config-server
+server.port=8888
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
