--- a/microservices/gateway/src/main/resources/application-local.properties
+++ b/microservices/gateway/src/main/resources/application-local.properties
@@ -13,3 +13,4 @@ logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMap
 logging.level.io.micrometer.registry.otlp=ERROR
 ecommerce.checkout.products.url=http://localhost:8081
 ecommerce.checkout.cart.url=http://localhost:8082
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
