--- a/microservices/products-ms/src/main/resources/application-local.properties
+++ b/microservices/products-ms/src/main/resources/application-local.properties
@@ -7,7 +7,9 @@ spring.datasource.username=products_ms
 spring.datasource.url=jdbc:postgresql://localhost:5432/products_ms
 spring.datasource.password=products_ms
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=config-server
 spring.application.name=products-ms
 server.port=8081
 management.zipkin.tracing.endpoint=http://localhost:4318/v1/traces
