--- a/microservices/products-ms/src/main/resources/application.properties
+++ b/microservices/products-ms/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.application.name=products-ms
-spring.config.import=configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.profiles.active=default
+spring.config.import=configserver:
+spring.cloud.config.discovery.service-id=config-server
+spring.cloud.config.discovery.enabled=true
+spring.application.name=products-ms
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
