--- a/microservices/gateway/src/main/resources/application.properties
+++ b/microservices/gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=default
 spring.application.name=checkout-gateway
-spring.config.import=configserver:
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=config-server
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
