--- a/microservices/products-ms/src/main/resources/application.properties
+++ b/microservices/products-ms/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=default
-spring.config.import=configserver:
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.discovery.service-id=config-server
 spring.cloud.config.discovery.enabled=true
 spring.application.name=products-ms
