feat(infra): add legacy URL configuration to gateway

--- a/microservices/docker/config-server/config/checkout-gateway.properties
+++ b/microservices/docker/config-server/config/checkout-gateway.properties
@@ -3,4 +3,5 @@ spring.config.import=file:config/observability.properties
 server.port=8080
 ecommerce.checkout.products.url=http://products-ms:8081
 ecommerce.checkout.cart.url=http://cart-ms:8082
+legacy.url=http://legacy-monolith:8181
 
