feat: add basic auth to config-server

--- a/secure-microservices/products-ms/src/main/resources/application.properties
+++ b/secure-microservices/products-ms/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.profiles.active=default
+spring.security.user.name=products
+spring.security.user.password=products
+spring.security.user.roles=SERVICE
+spring.cloud.config.enabled=true
 spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
-spring.cloud.config.discovery.service-id=config-server
-spring.cloud.config.discovery.enabled=true
+spring.cloud.config.username=config-server
+spring.cloud.config.password=config-server
+spring.cloud.discovery.enabled=false
 spring.application.name=products-ms
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=8081
