--- a/secure-microservices/authserver/src/main/resources/application.yml
+++ b/secure-microservices/authserver/src/main/resources/application.yml
@@ -1,15 +1,7 @@
 server:
   port: 9000
-
-logging:
-  level:
-    org.springframework.security: trace
-
 spring:
   security:
-    user:
-      name: auth-server
-      password: auth-server
     oauth2:
       authorizationserver:
         client:
@@ -35,3 +27,19 @@ spring:
                 - "carts.read"
                 - "carts.write"
             require-authorization-consent: true
+
+          config-client:
+            registration:
+              client-id: "config-client"
+              client-secret: "{noop}config-server-secret"
+              client-authentication-methods:
+                - "client_secret_basic"
+              authorization-grant-types:
+                - "client_credentials"
+              scopes:
+                - "config.read"
+                - "config.write"
+
+  resourceserver:
+    jwt:
+      issuer-uri: http://localhost:9000
