--- a/secure-microservices/config-server/src/main/resources/application.properties
+++ b/secure-microservices/config-server/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+spring.security.user.password=config-server
+spring.security.user.name=config-server
 spring.profiles.active=native
+spring.cloud.discovery.enabled=false
 spring.cloud.config.server.native.search-locations=classpath:/config
 spring.application.name=config-server
 server.port=8888
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.security.web.authentication=TRACE
+logging.level.org.springframework.security.oauth2.server.resource=TRACE
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
