feat: enable basic auth in service-discovery and config-server strategy done

--- a/secure-microservices/gateway/src/main/resources/application.properties
+++ b/secure-microservices/gateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=carts-ms
+spring.application.name=checkout-gateway
 spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.username=config-server
 spring.cloud.config.password=config-server
