--- a/secure-microservices/config-server/src/main/resources/config/products-ms.properties
+++ b/secure-microservices/config-server/src/main/resources/config/products-ms.properties
@@ -5,3 +5,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=products_ms
 spring.datasource.url=jdbc:postgresql://localhost:5432/products_ms
 spring.datasource.username=products_ms
+spring.security.user.name=products
+spring.security.user.password=products
+spring.security.user.roles=SERVICE
+eureka.client.service-url.defaultZone=http://service-discovery:service-discovery@localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
