--- a/secure-microservices/service-discovery/src/main/resources/application.properties
+++ b/secure-microservices/service-discovery/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=service-discovery
-server.port=8761
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
+spring.cloud.config.username=config-server
+spring.cloud.config.password=config-server
