feat: telemetry removed to simplify security integration with docker-compose

--- a/secure-microservices/products-ms/src/main/resources/application.properties
+++ b/secure-microservices/products-ms/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.application.name=products-ms
 spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
 spring.cloud.config.username=config-server
 spring.cloud.config.password=config-server
-
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.enabled=true
+spring.cloud.config.retry.max-attempts=13
+spring.cloud.config.retry.max-interval=3000
+spring.cloud.config.retry.multiplier=1.2
+spring.cloud.config.retry.initial-interval=1100
