--- a/secure-microservices/config-server/src/main/resources/config/service-discovery.properties
+++ b/secure-microservices/config-server/src/main/resources/config/service-discovery.properties
@@ -1,4 +1,5 @@
 server.port=8761
+eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.client.service-url.defaultZone=http://service-discovery:service-discovery@localhost:8761/eureka/
