--- a/secure-microservices/docker/config-server/config/carts-ms.properties
+++ b/secure-microservices/docker/config-server/config/carts-ms.properties
@@ -1,7 +1,11 @@
 server.port=8082
-spring.application.name=cart-ms
+spring.application.name=carts-ms
 spring.config.import=file:config/observability.properties,file:config/database.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=cart_ms
 spring.datasource.url=jdbc:postgresql://postgres:5432/cart_ms
 spring.datasource.username=cart_ms
+spring.security.user.name=carts
+spring.security.user.password=carts
+spring.security.user.roles=SERVICE
+eureka.client.service-url.defaultZone=http://service-discovery:service-discovery@service-discovery:8761/eureka/
