--- a/secure-microservices/docker/config-server/config/checkout-gateway.properties
+++ b/secure-microservices/docker/config-server/config/checkout-gateway.properties
@@ -1,7 +1,15 @@
-spring.reactor.context-propagation=AUTO
-spring.config.import=file:config/observability.properties
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://service-discovery:service-discovery@service-discovery:8761/eureka/
 server.port=8080
-ecommerce.checkout.products.url=http://products-ms:8081
-ecommerce.checkout.cart.url=http://cart-ms:8082
-legacy.url=http://legacy-monolith:8181
+services.carts-ms.pass=carts
+services.carts-ms.url=lb://carts-ms
+services.carts-ms.user=carts
+services.legacy.url=http://legacy:8181
+services.products-ms.pass=products
+services.products-ms.url=lb://products-ms
+services.products-ms.user=products
+spring.config.import=classpath:config/observability.properties
+spring.reactor.context-propagation=AUTO
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:9000
 
