--- a/secure-microservices/docker/config-server/config/products-ms.properties
+++ b/secure-microservices/docker/config-server/config/products-ms.properties
@@ -5,3 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=products_ms
 spring.datasource.url=jdbc:postgresql://postgres:5432/products_ms
 spring.datasource.username=products_ms
+spring.security.user.name=products
+spring.security.user.password=products
+spring.security.user.roles=SERVICE
+eureka.client.service-url.defaultZone=http://service-discovery:service-discovery@service-discovery:8761/eureka/
