refactor: config server removed from discovery strategy

--- a/microservices/service-discovery/src/main/resources/application.properties
+++ b/microservices/service-discovery/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=service-discovery
 server.port=8761
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+spring.config.import=optional:configserver:${CONFIG_SERVER_URL:http://localhost:8888}
