--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -34,21 +34,59 @@ services:
     networks:
       - spring-cloud-microservice
 
-  config-server:
+  config-server-instance-1:
     build:
       context: ./config-server
-    container_name: config-server
+    container_name: config-server-instance-1
 
     environment:
-      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery:8761/eureka
       - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCHLOCATIONS=file:/app/config
+      - SERVER_PORT=8881
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8881/actuator/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    volumes:
+      - ./docker/config-server/config:/app/config
+    networks:
+      - spring-cloud-microservice
+
+  config-server-instance-2:
+    build:
+      context: ./config-server
+    container_name: config-server-instance-2
+    environment:
+      - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCHLOCATIONS=file:/app/config
+      - SERVER_PORT=8882
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8882/actuator/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    volumes:
+      - ./docker/config-server/config:/app/config
+    networks:
+      - spring-cloud-microservice
+
+  config-server:
+    image: nginx:latest
+    container_name: config-server
+    depends_on:
+      config-server-instance-1:
+        condition: service_healthy
+      config-server-instance-2:
+        condition: service_healthy
+    ports:
+      - "8888:8888"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8888/actuator/health"]
       interval: 5s
       timeout: 3s
       retries: 5
     volumes:
-      - ./docker/config-server/config:/app/config
+    - ./docker/config-server/loadbalancer/nginx.conf:/etc/nginx/nginx.conf
+    restart: always
     networks:
       - spring-cloud-microservice
   
